--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,16 +4,26 @@
 
 /* Variables */
 :root {
-    --white: #fff;
+
+    /* Text Sizes */
+    --text-large: 6.4rem;
+    --text-medium: 1.6rem;
+
+    /* Colors */
+    --primary: #fff;
+    --secondary: #fafafa;
+
+
     --subway-green: #008938;
     --subway-yellow: #f2b700;
-    --grey: #ebebeb;
+
+    --background-primary: #008938;
 }
 
 /* Styles */
 body {
     font-family: 'Poppins', sans-serif;
-    background: var(--white);
+    background: var(--background-primary);
 
     height: 100vh;
     width: 100vw;
@@ -24,7 +34,7 @@ body {
     overflow:hidden;
 
     margin: 0;
-    transform: rotate(180deg) 
+    /* transform: rotate(180deg)  */
 }
 
 /* Containers */
@@ -39,7 +49,7 @@ header {
 }
 footer {
     padding-left: 2vw;
-    display: flex;
+    /* display: flex; */
     justify-content: flex-end;
     align-items: flex-start;
     flex-direction: column;
@@ -47,20 +57,37 @@ footer {
     width: 25vw;
 
     position: absolute; 
-    bottom: 0
+    bottom: 0;
+
+    display: none;
+}
+
+nav {
+    background-color: var(--background-primary);
+
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: row;
 }
 
 /* Text Styles */
 h1 {
-    color: var(--subway-green);
-    font-size: 10rem;
+    color: var(--primary);
+    font-size: var(--text-large);
     margin: 0;
-    line-height: 10rem;
+    line-height: var(--text-large);
 }
 
 h4 {
-    color: var(--black);
-    font-size: 3.5rem;
+    color: var(--secondary);
+    font-size: var(--text-medium);
+    line-height: var(--text-medium);
     text-transform: uppercase;
     margin: 0;
 }
